# zerokey

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  conftest.py  manage.py  pyproject.toml
backend/apps/administration/: admin.py  apps.py  bnm_rates.py  catalog_refresh.py  crypto.py  fields.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/administration/migrations/: 0001_initial.py  0002_classificationcode_countrycode_msiccode_taxtypecode_and_more.py  0003_seed_reference_catalogs.py  0004_impersonationsession.py  0005_encrypt_existing_secrets.py  0006_bnm_exchange_rate.py
backend/apps/administration/tests/: test_admin_auth.py  test_admin_engines.py  test_admin_membership.py  test_admin_system_settings.py  test_admin_tenant_edit.py  test_catalog_refresh.py  test_crypto.py  test_impersonation.py  test_platform_audit.py  test_platform_overview.py  test_platform_tenants.py  test_reference_catalogs.py  test_system_setting.py  test_tenant_detail.py
backend/apps/archive/: apps.py  models.py  services.py  tasks.py
backend/apps/archive/migrations/: 0001_initial.py  0002_archive_rls.py
backend/apps/archive/tests/: test_archive.py
backend/apps/audit/: apps.py  canonical.py  chain.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/audit/migrations/: 0001_initial.py  0002_append_only_rls.py  0003_audit_sequence_counter.py  0004_chainverificationrun.py
backend/apps/audit/tests/: test_canonical.py  test_chain.py  test_list_events.py  test_record_event.py  test_scheduled_verify.py  test_stats.py  test_verify_chain.py
backend/apps/billing/: apps.py  checkout.py  decorators.py  models.py  services.py  stripe_client.py  tasks.py  urls.py  views.py
backend/apps/billing/migrations/: 0001_initial.py  0002_billing_rls.py  0003_seed_plans.py  0004_stripe_price_ids.py  0005_featureflag_featureflagoverride_overagewaiver.py  0006_seed_feature_flags.py  0007_rls_new_tenant_tables.py
backend/apps/billing/tests/: test_billing.py  test_stripe.py
backend/apps/connectors/: apps.py  documents.py  merge_classifier.py  models.py  pull_services.py  serializers.py  sync_services.py  urls.py  views.py
backend/apps/connectors/adapters/: __init__.py  autocount_adapter.py  base.py  csv_adapter.py  sage_ubs_adapter.py  sql_account_adapter.py
backend/apps/connectors/migrations/: 0001_initial.py  0002_rls_policies.py  0003_proposal_conflict_lock.py  0004_rls_policies.py  0005_add_sql_account_sage_ubs_connector_types.py  0006_connector_pull_cursor.py
backend/apps/connectors/tests/: test_autocount_adapter.py  test_classify_merge.py  test_csv_adapter.py  test_endpoints.py  test_integration_config.py  test_proposal_conflict_lock.py  test_sync_services.py
backend/apps/enrichment/: apps.py  items_urls.py  models.py  msic_search.py  msic_urls.py  rematch.py  serializers.py  services.py  tasks.py  tin_lookup.py  tin_verification.py  urls.py  views.py
backend/apps/enrichment/migrations/: 0001_initial.py  0002_rls_policies.py  0003_field_provenance_and_states.py  0004_encrypt_customermaster_pii.py  0005_customer_auto_submit_override.py
backend/apps/enrichment/tests/: test_customers_api.py  test_enrichment.py  test_field_provenance.py  test_items_api.py  test_rematch.py  test_tin_verification.py
backend/apps/extraction/: admin.py  apps.py  capabilities.py  credentials.py  models.py  prompts.py  qr.py  registry.py  router.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/extraction/adapters/: claude_adapter.py  easyocr_adapter.py  nvidia_mistral_adapter.py  ollama_adapter.py  pdfplumber_adapter.py  rapidocr_adapter.py  regex_adapter.py
backend/apps/extraction/migrations/: 0001_initial.py  0002_seed_engines_and_rules.py  0003_engine_credentials.py  0004_seed_ollama_structure.py  0005_seed_easyocr.py  0006_seed_rapidocr.py  0007_seed_nvidia_mistral_structure.py
backend/apps/extraction/tests/: test_credentials.py  test_easyocr_adapter.py  test_engine_activity.py  test_ollama_adapter.py  (+4 more)
backend/apps/identity/: api_key_auth.py  api_keys.py  apps.py  integrations.py  invitations.py  managers.py  models.py  notifications.py  serializers.py  services.py  signals.py  sso.py  tenancy.py  totp.py  urls.py  views.py
backend/apps/ingestion/: apps.py  email_forward.py  models.py  serializers.py  services.py  urls.py  views.py  whatsapp.py
backend/apps/integrations/: apps.py  crypto.py  delivery.py  models.py  services.py  storage.py  tasks.py  urls.py  views.py
backend/apps/licensing/: __init__.py  admin.py  apps.py  entitlements.py  models.py  release_views.py  services.py  signing_views.py  tasks.py  telemetry_views.py  urls.py  views.py
backend/apps/notifications/: apps.py  email.py  services.py  tasks.py
backend/apps/submission/: amendments.py  approvals.py  apps.py  auto_submit.py  certificates.py  consolidated_b2c.py  exports.py  inbox.py  inbox_urls.py  inbox_views.py  lhdn_client.py  lhdn_json.py  lhdn_submission.py  models.py  serializers.py  services.py  signed_blob.py  tasks.py  tin_validation.py  ubl_xml.py  urls.py  views.py  xml_signature.py
backend/apps/validation/: apps.py  models.py  rules.py  services.py
backend/zerokey/: __init__.py  asgi.py  celery.py  exception_handlers.py  idempotency.py  middleware.py  throttling.py  urls.py  wsgi.py
backend/zerokey/settings/: base.py  dev.py  prod.py  test.py
backend/zerokey/tests/: test_health.py
desktop/sidecar/: manage.py  pyproject.toml  run_sidecar.py
desktop/sidecar/zk_desktop/: apps.py  boot.py  cloud_signing.py  entitlement_auth.py  entitlement_verify.py  remote_signer.py  settings.py  tenancy.py  urls.py  wsgi.py
(+278 files in other folders)
